Revision history for {{$dist->name}}

{{$NEXT}}

0.083     2015-01-08 04:24:23Z
          - fix regression in 0.082 that caused new generated files not to be
            commited to git after a release
          - -remove = <plugin> now also accepts the unique plugin name, not
            just the class, for more targeted plugin removal

0.082     2015-01-03 20:15:37Z
          - use [Git::Describe]'s new on_package_line feature
          - (temporarily?) revert use of 'our' syntax for $VERSION
            declarations (see RT#101095)

0.081     2014-12-10 02:09:34Z
          - $VERSION statements inserted into modules now use 'our' syntax
            rather than fully-qualfied variable names
          - added more files to the list of things we will never gather from
            the dist, for future-proofing

0.080     2014-11-22 04:53:32Z
          - avoid failing on perl 5.21.6 where aliased.pm is warning

0.079     2014-11-15 08:27:51Z
          - now using colours in diagnostic mesages

0.078     2014-10-29 00:47:46Z
          - documented the first version each configuration option became
            available
          - remove duplicate [MetaConfig] in tests, to avoid issues with meta
            merging in Dist::Zilla 5.022 (RT#99852)
          - ensure environment variables are in the right state during tests

0.077     2014-10-26 21:16:11Z
          - switch from [EOLTests] to [Test::EOL]

0.076     2014-10-18 22:07:58Z
          - bump optional dependency on [MakeMaker::Awesome] to avoid old bug
            with loaded modules
          - copy_file_from_release option now appends to, rather than
            overshadowing, the defaults, so users do not need to repeat the
            defaults (which may change over time)
          - reset default eumm_version in MakeMaker plugins to 0, as done in
            [MakeMaker] version 5.020
          - new 'changes_version_columns' configuration option, for
            tweaking [NextRelease] format strings
